--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name='dmca-site-verification' content='QlIwc21Cc04rRnljNVZhTkhpMjJTZz090' />
 </head>
   <body>
 
